Solved font-wrap problem

--- a/src/App.css
+++ b/src/App.css
@@ -12,20 +12,24 @@ img {
     margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
+    
+    max-width: 50vw;
     overflow-wrap: break-word;
+    word-wrap: break-word;
+
   }
   
   .msg {
     display: flex;
     padding: 20px 10px 0 20px;
     margin: 20px;
-    border-radius: 3000px;
+    border-radius: 2000px;
     box-shadow: 0 0 10px rgb(164, 164, 164);
     align-items: center;
   }
   
   .sent {
-    background-color: #395dff;
+    background-color: #008000;
     color: white;
     border-top-right-radius: 1000px;
     flex-direction: row-reverse;
